# TrafficAI

./: .gitignore  Dockerfile  README.md  bytetrack.yaml  desktop.ini  detect_lane_driving.py  detect_no_helmet.py  detect_speed_limit.py  detect_traffic_sign.py  detect_xenguocchieu.py  download_data.sh  download_model.sh  kaggle.json  requirements.txt  run.py  start_server.sh  tracking.py  train_dfine.sh  train_yolo.sh  train_yolo11m.py  train_yolo11s.py
D-FINE/configs/: runtime.yml
D-FINE/tools/inference/cppExample/trt/para/: CMakeLists.txt  dual_dfine_inference.cpp
Yolo/: data.yaml  data_stage_2.yaml  hyps.yaml  train_st_1.py  train_st_2.py
configs/: data.yaml  dataset.example.yaml  dataset_balanced.yaml  dataset_datav2_balanced.yaml  dataset_fisheye.yaml  dataset_v2.yaml  roi_config.json  roi_config_test.json
data/labels/: frame_00021_jpg.rf.4JuR8GXhGLbqMlMcnnyZ.txt  frame_00061_jpg.rf.6lXK4Q6PACA5NFf0CAHS.txt  frame_00142_jpg.rf.fvgms3HmaUKZcuCVwdeZ.txt  frame_00143_jpg.rf.M0oahi2UHFdTgI86D0G2.txt  frame_00156_jpg.rf.IntjlMPTfEOS5U4UAK43.txt  frame_00157_jpg.rf.GX1fL70VU4tYaAUWUqEt.txt  frame_00159_jpg.rf.oJ94pghluVKnzT8FxCDS.txt  frame_00160_jpg.rf.hLyOmPmtLeRFUJqP3fBt.txt  frame_00171_jpg.rf.IWoj1T7R14G2ybNRUYYo.txt  frame_00201_jpg.rf.yVsUcyS9cN0fSJ6Y4iTZ.txt  (+211 more)
inference/: Dockerfile  README.txt
scripts/: detect.py  detect1.py  evaluate.py  pipeline.py  train.py  violation_checker.py
src/: convert.py  detect_xenguocchieu.py  eval_models.py  find_duplicate.py  merge_dfine.py  train_yolo11m.py  yolo2coco.py
training/: README.md  split_dataset.py
(+306 files in other folders)
